Add favorite to updateUser
